# haskell-bookkeeping

./: .travis.yml  LICENSE  README.md  bookkeeping.cabal  haskell-bookkeeping.cabal  stack-lts-7.yaml  stack.yaml
app/: Main.hs
src/: Bookkeeping.hs
src/Business/: Bookkeeping.hs
src/Business/Bookkeeping/: Types.hs
test/: Doctest.hs
